# mie443_contest3

./: README.md
mie443_contest3/: CMakeLists.txt  package.xml
mie443_contest3/include/: bumper.h  cliff.h  eStop.h  fear.h  header.h  imageTransporter.hpp  sound_detection.h  sound_direction.h
mie443_contest3/src/: bumper.cpp  cliff.cpp  contest3.cpp  fear.cpp  imageTransporter.cpp  my_publisher_video.cpp  sound_detection.cpp  sound_direction.cpp
turtlebot_follower/src/: follower.cpp
